# sub-stream

./: .gitignore  README-USER.txt  README.md  open-edge-guide.bat  run-backend.bat  setup-edge.bat
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  substream_whisper.cpp
android/app/src/main/java/ai/substream/android/: MainActivity.kt
android/app/src/main/java/ai/substream/android/audio/: PcmUtils.kt  PlaybackAudioCapture.kt
android/app/src/main/java/ai/substream/android/data/: AppSettings.kt  SettingsStore.kt
android/app/src/main/java/ai/substream/android/engine/: LocalWhisperEngine.kt  NativeWhisperBridge.kt  WhisperModelStore.kt
android/app/src/main/java/ai/substream/android/net/: BackendTranslator.kt  CloudRealtimeClient.kt
android/app/src/main/java/ai/substream/android/overlay/: CaptionOverlay.kt
android/app/src/main/res/drawable/: ic_notification.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
backend/: config.py  requirements.txt  server.py
design/: index.html  script.js  styles.css
extension/: audio-worklet.js  background.js  content.css  content.js  manifest.json  offscreen.html  offscreen.js  subtitle-utils.js
extension/native/: com.kamisubs.host.json.template  install.ps1  launcher.bat  launcher.py  uninstall.ps1
extension/popup/: popup.css  popup.html  popup.js
extension/popup/assets/: NOTICE.md
tests/: subtitle-utils.test.js
(+1 files in other folders)
